--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.10.0",
+    "@codesandbox/sandpack-themes": "^2.0.21",
     "@mdx-js/loader": "^3.0.0",
     "@next/mdx": "^14.0.2",
     "@radix-ui/react-dropdown-menu": "^0.1.6",
@@ -59,7 +61,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.10.2",
     "rehype-slug": "^6.0.0",
-    "remark-autolink-headings": "^7.0.1",
+    "remark-autolink-headings": "6.0.1",
     "remark-gfm": "^4.0.0",
     "remark-slug": "^7.0.1",
     "shiki": "^0.14.5",
