--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   },
   "devDependencies": {
     "@types/color": "^3.0.6",
+    "@types/flat": "^5.0.5",
     "@types/lodash.foreach": "^4.5.9",
     "@types/lodash.get": "^4.4.9",
     "@types/lodash.kebabcase": "^4.1.9",
