--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "create:cmp": "plop component",
     "lint": "next lint"
   },
   "dependencies": {
@@ -22,7 +23,7 @@
     "@react-aria/dialog": "3.3.0",
     "@react-aria/focus": "3.7.0",
     "@react-aria/i18n": "3.5.1",
-    "@react-aria/interactions": "3.10.0",
+    "@react-aria/interactions": "^3.10.0",
     "@react-aria/label": "3.4.0",
     "@react-aria/link": "3.3.1",
     "@react-aria/menu": "3.6.0",
@@ -44,6 +45,8 @@
     "deepmerge": "4.3.1",
     "flat": "^5.0.2",
     "framer-motion": "^10.16.4",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
     "lodash.foreach": "^4.5.0",
     "lodash.get": "^4.4.2",
@@ -53,6 +56,8 @@
     "next": "13.5.6",
     "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.2.1",
+    "next-with-less": "^3.0.1",
     "prism-react-renderer": "^2.2.0",
     "prismjs": "^1.29.0",
     "react": "^18",
@@ -87,6 +92,7 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "plop": "^4.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.5",
     "typescript": "^5"
